chaos.降低珍珠拦截阈值